--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -14,6 +14,7 @@
   box-shadow: 2px 2px 12px #cccccc, -1px -1px 12px #ddd9d9;
   overflow-x: hidden;
   transition: all 0.5s;
+  position: fixed;
 
   .logo-hide,
   h1.logo-hide,
@@ -33,8 +34,8 @@
       height: 3.2rem;
     }
   }
-  &__top{
-    margin: 0 -.5rem;
+  &__top {
+    margin: 0 -0.5rem;
     margin-bottom: 2rem;
   }
 
@@ -136,19 +137,20 @@
     gap: 0.5rem;
     cursor: pointer;
 
-    span{
-      padding: .5rem;
+    span {
+      padding: 0.5rem;
       border-radius: 6px;
       box-shadow: 2px 2px 4px #cdccd5;
 
       &:active {
-        box-shadow: inset 2px 2px 4px #cdccd5,inset -2px -2px 4px #ffffff;
-      & ~ .sidebar__user--pic{
-        box-shadow: -1px -1px 3px 3px #cdccd5, 2px 2px 3px 3px #ffffff, inset -1px -1px 1px #00000048, inset 1px 1px 1px #0099ff;
+        box-shadow: inset 2px 2px 4px #cdccd5, inset -2px -2px 4px #ffffff;
+        & ~ .sidebar__user--pic {
+          box-shadow: -1px -1px 3px 3px #cdccd5, 2px 2px 3px 3px #ffffff,
+            inset -1px -1px 1px #00000048, inset 1px 1px 1px #0099ff;
         }
       }
     }
-      
+
     &--pic {
       font-size: 2.5rem;
       height: 4rem;
@@ -161,17 +163,17 @@
       padding: 0.5rem;
       border-radius: 50%;
       background-color: #0072bc;
-      transition: font-size .5s;
+      transition: font-size 0.5s;
       box-shadow: 1px 1px 2px 2px #cdccd5, -1px -1px 3px 3px #ffffff;
 
-      &:active{
-        box-shadow: -1px -1px 3px 3px #cdccd5, 2px 2px 3px 3px #ffffff, inset -1px -1px 1px #00000048, inset 1px 1px 1px #0099ff;
+      &:active {
+        box-shadow: -1px -1px 3px 3px #cdccd5, 2px 2px 3px 3px #ffffff,
+          inset -1px -1px 1px #00000048, inset 1px 1px 1px #0099ff;
       }
 
-      pic{
+      pic {
         user-select: none;
       }
-
     }
 
     &[hide] .sidebar__user--pic {
@@ -212,7 +214,7 @@
 }
 .toggle.active {
   margin: 1rem 0;
-  left:95%;
+  left: 95%;
   top: 2px;
   position: absolute;
   transform: translateX(-100%);
